# ISP-Simulation

./: ReadMe.md
src/: AwbCore.cpp  AwbCore.h  CMakeLists.txt  GammaCore.cpp  GammaCore.h  ISPPipelineIntf.cpp  ISPPipelineIntf.h  MainTest.cpp
src/core/: ISPLog.h
test_raw/output/: ReadMe.txt
